--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Hey, this is WMX."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,14 +15,14 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>经历过一些事后，始终相信选择比努力更重要 <br>
+    但是仍然是要努力</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hey，我是<strong>王明晓(WMX)</strong>，目前是一只正在学习Python的程序媛，研究计算机视觉、机器学习（二值化网络）。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>安静的外表下隐藏着一颗不安的心，兴趣广而泛，喜欢游泳、喜欢咏春、喜欢阅读美文、喜欢精装知识、喜欢质感。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/wmx17806275903">👉GitHub·WMX</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
